# portfolio-optimization

./: .gitignore  GEMINI.md  Introduction to Portfolio Optimization.ipynb  README.md  main.py  pipeline.sh  portfolio-optimization.ipynb  portfolio-optimization.py  pyproject.toml  todo
notebooks/: data_analysis.ipynb  portfolio-optimization.ipynb  portfolio_optimization.ipynb
src/: crossovers.py  data.py  evolution.py  mutations.py  plots.py  selections.py  tickers.py  utils.py
