[project]
name = "portfolio-optimization"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "deap>=1.4.3",
    "ipywidgets>=8.1.8",
    "matplotlib>=3.10.8",
    "notebook>=7.5.1",
    "numba>=0.63.1",
    "numpy>=2.3.5",
    "optuna>=4.6.0",
    "pandas>=2.3.3",
    "seaborn>=0.13.2",
    "tqdm>=4.67.1",
    "yfinance>=1.0",
]

[dependency-groups]
dev = [
    "ruff>=0.14.10",
]
